Horizontal scroll fix 14

--- a/style.css
+++ b/style.css
@@ -11,10 +11,8 @@ body {
     display: grid;
     justify-content: center;
     align-self: start;
-    /* width: auto; */
     min-width: 300px;
-    max-width: 100%;
-    overflow-x: hidden;
+    width: 100%;
     padding: 1rem;
     font-family: 'Open Sans', sans-serif;
 }
